--- a/docs/man/xen-tscmode.pod.7
+++ b/docs/man/xen-tscmode.pod.7
@@ -104,10 +104,10 @@ be read.
 =head1 DETERMINING RDTSC FREQUENCY
 
 To determine the frequency of rdtsc instructions that are emulated,
-an "xm" command can be used by a privileged user of domain0.  The
+an "xl" command can be used by a privileged user of domain0.  The
 command:
 
-    # xm debug-key s; xm dmesg | tail
+    # xl debug-key s; xl dmesg | tail
 
 provides information about TSC usage in each domain where TSC
 emulation is currently enabled.
