docs: fix kernel config option in xen-pv-channel
HVC is shown underlined, the underscores are missing.
Fix it by using underscores.
Remove stale I.

Signed-off-by: Olaf Hering <olaf@aepfle.de>
Acked-by: Wei Liu <wei.liu2@citrix.com>

--- a/docs/man/xen-pv-channel.pod.7
+++ b/docs/man/xen-pv-channel.pod.7
@@ -108,7 +108,7 @@ socket, writes a handshake message and waits for a reply
 
 =item 6.
 
-Assuming the guest kernel has CONFIGI<HVC>XEN_FRONTEND set then the console
+Assuming the guest kernel has CONFIG_HVC_XEN_FRONTEND set then the console
 driver will generate a hotplug event
 
 
