--- a/docs/man/xenstore-write.pod.1
+++ b/docs/man/xenstore-write.pod.1
@@ -17,6 +17,10 @@ provided to write them at once - in one Xenstore transaction.
 
 Connect to the Xenstore daemon using a local socket only.
 
+=item B<-R>
+
+Write raw value, skip parsing escaped characters (\x..).
+
 =back
 
 =head1 BUGS
