Reservation of PCI device range 0xc200-0xc2ff to XCP-ng Project
We are the XCP-ng project (https://xcp-ng.org) and want to distribut our
 own PV-Tools (maybe also per windows updates) so we need an extra range.

We also registered a PCI-Device:

"XCP-ng Project PCI Device for Windows Update" ->
https://pci-ids.ucw.cz/read/PC/5853/c200

Signed-off-by: Alexander Schulz <code@schulzalex.de>
Reviewed-by: Paul Durrant <paul.durrant@citrix.com>
Acked-by: Ian Jackson <ian.jackson@eu.citrix.com>
Acked-by: Wei Liu <wei.liu2@citrix.com>

--- a/docs/man/xen-pci-device-reservations.pod.7
+++ b/docs/man/xen-pci-device-reservations.pod.7
@@ -41,6 +41,7 @@ multiple Xen vendors using conflicting IDs.
     0x0002        | Citrix XenServer (grandfathered allocation for XenServer 6.1)
     0xc000-0xc0ff | Citrix XenServer
     0xc100-0xc1ff | Citrix XenClient
+    0xc200-0xc2ff | XCP-ng Project (https://xcp-ng.org)
 
 =head1 Notes
 
