man: Highlight reference in xl-disk-configuration(5)
Provide a better way to see the link to a different manpage, with simple
words.

Suggested-by: Ian Jackson <ian.jackson@citrix.com>
Signed-off-by: Anthony PERARD <anthony.perard@citrix.com>
Acked-by: Ian Jackson <ian.jackson@eu.citrix.com>
Release-acked-by: Juergen Gross <jgross@suse.com>

--- a/docs/man/xl-disk-configuration.5.pod
+++ b/docs/man/xl-disk-configuration.5.pod
@@ -123,7 +123,7 @@ raw
 =item Description
 
 Virtual device as seen by the guest (also referred to as guest drive
-designation in some specifications).  L<xen-vbd-interface(7)>
+designation in some specifications).  See L<xen-vbd-interface(7)>.
 
 =item Supported values
 
